--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@thzero/library_client_vue3",
-  "version": "0.14.0",
+  "version": "0.14.1",
   "version_major": 0,
   "version_minor": 14,
-  "version_patch": 0,
+  "version_patch": 1,
   "version_date": "08/31/2021",
   "description": "An opinionated library of common functionality to bootstrap a VueJs based SPA application.",
   "author": "thZero",
@@ -21,21 +21,21 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@thzero/library_common": "^0.13",
     "@thzero/library_client": "^0.14",
+    "@thzero/library_common": "^0.13",
+    "@vuelidate/core": "^2.0.0-alpha.24",
+    "@vuelidate/validators": "^2.0.0-alpha.21",
     "easy-rbac": "^3.1.1",
     "highlight.js": "^11.2.0",
     "marked": "^3.0.0",
     "mitt": "^3.0.0",
-    "vee-validate": "^3.4.11",
-    "vue": "^2.6.14",
-    "vue-async-computed": "^3.9.0",
-    "vue-i18n": "^8.25.0",
-    "vue-router": "^3.5.2",
+    "vee-validate": "^4.4.6",
+    "vue": "^3.0.0",
+    "vue-i18n": "^9.1.6",
+    "vue-router": "^4.0.0-0",
     "vue-scrollto": "^2.20.0",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-datetime-picker": "^2.1.1",
-    "vuetify-loader": "^1.7.2",
+    "vue3-async-computed": "^3.0.0",
+    "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
@@ -43,7 +43,6 @@
   },
   "peerDependencies": {
     "@alienfast/i18next-loader": "^1.1.4",
-    "@mdi/font": "^5.9.55",
-    "material-design-icons-iconfont": "^6.1.0"
+    "@mdi/font": "^5.9.55"
   }
 }
