--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,7 +32,7 @@ jobs:
     - name: Node Dependencies
       run: |
         npm install --no-package-lock
-    - name: Update Package Version
+    - name: Package Info
       run: |
         cat package.json
     - name: Initialize Node.js ${{ matrix.node-version }}
@@ -50,7 +50,7 @@ jobs:
     - name: Git Check Output
       run: |
         echo changed? ${{ steps.git-changes.outputs.changed }}
-    - name: Git Commit
+    - name: Git Commit Version
       run: |
         git config --global user.name '${{ github.repository_owner }}'
         git config --global user.email '${{ github.repository_owner }}@users.noreply.github.com'
