--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@thzero/library_cli": "^0.13.17"
   },
   "peerDependencies": {
-    "@alienfast/i18next-loader": "^1.1.4",
-    "@mdi/font": "^5.9.55"
+    "@alienfast/i18next-loader": "^1",
+    "@mdi/font": "^6",
+    "@thzero/library_common": "^0.13"
   }
 }
