--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@thzero/library_client_vue3",
-  "version": "0.15.7",
+  "version": "0.15.8",
   "version_major": 0,
   "version_minor": 15,
-  "version_patch": 7,
-  "version_date": "02/19/2022",
+  "version_patch": 8,
+  "version_date": "02/23/2022",
   "description": "An opinionated library of common functionality to bootstrap a VueJs based SPA application.",
   "author": "thZero",
   "license": "MIT",
@@ -30,9 +30,9 @@
     "highlight.js": "^11.4.0",
     "mitt": "^3.0.0",
     "vee-validate": "^4.4.6",
-    "vue": "^3.0.0",
+    "vue": "^3.2.13",
     "vue-i18n": "^9.1.6",
-    "vue-router": "^4.0.0-0",
+    "vue-router": "^4.0.3",
     "vue-scrollto": "^2.20.0",
     "vue3-async-computed": "^3.0.0",
     "vuex": "^4.0.2",
