--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@vuelidate/core": "^2.0.0-alpha.40",
     "@vuelidate/validators": "^2.0.0-alpha.28",
     "easy-rbac": "^3.2.0",
-    "highlight.js": "^11.5.0",
+    "highlight.js": "^11.5.1",
     "mitt": "^3.0.0",
     "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
@@ -38,12 +38,8 @@
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3"
   },
-  "devDependencies": {
-    "@thzero/library_cli": "^0.15"
-  },
   "peerDependencies": {
     "@alienfast/i18next-loader": "^1",
-    "@mdi/font": "^6",
-    "@thzero/library_common": "^0.15"
+    "@mdi/font": "^6"
   }
 }
