--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@thzero/library_client_vue3",
-  "version": "0.15.13",
+  "version": "0.16.2",
   "version_major": 0,
-  "version_minor": 15,
-  "version_patch": 13,
-  "version_date": "04/25/2022",
+  "version_minor": 16,
+  "version_patch": 2,
+  "version_date": "08/29/2022",
   "description": "An opinionated library of common functionality to bootstrap a VueJs based SPA application.",
   "author": "thZero",
   "license": "MIT",
@@ -22,12 +22,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@thzero/library_client": "^0.15",
-    "@thzero/library_common": "^0.15",
+    "@thzero/library_client": "^0.16",
+    "@thzero/library_common": "^0.16",
     "@vuelidate/core": "^2.0.0-alpha.40",
     "@vuelidate/validators": "^2.0.0-alpha.28",
     "easy-rbac": "^3.2.0",
-    "highlight.js": "^11.5.1",
+    "highlight.js": "^11.6.0",
     "mitt": "^3.0.0",
     "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
@@ -40,6 +40,7 @@
   },
   "peerDependencies": {
     "@alienfast/i18next-loader": "^1",
-    "@mdi/font": "^6"
+    "@mdi/font": "^7",
+    "material-design-icons-iconfont": "^6"
   }
 }
