--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@thzero/library_client_vue3",
-  "version": "0.16.11",
+  "version": "0.16.12",
   "version_major": 0,
   "version_minor": 16,
-  "version_patch": 11,
+  "version_patch": 12,
   "version_date": "11/23/2022",
   "description": "An opinionated library of common functionality to bootstrap a VueJs based SPA application.",
   "author": "thZero",
@@ -24,14 +24,14 @@
   "dependencies": {
     "@thzero/library_client": "^0.16",
     "@thzero/library_common": "^0.16",
-    "@vuelidate/core": "^2.0.0-alpha.40",
-    "@vuelidate/validators": "^2.0.0-alpha.28",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "easy-rbac": "^3.2.0",
     "highlight.js": "^11.6.0",
     "mitt": "^3.0.0",
-    "pinia": "^2.0.24",
+    "pinia": "^2.0.26",
     "pinia-plugin-persistedstate-2": "^2.0.3",
-    "vee-validate": "^4.6.4",
+    "vee-validate": "^4.7.3",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.3",
