--- a/package.json
+++ b/package.json
@@ -29,14 +29,10 @@
     "easy-rbac": "^3.2.0",
     "highlight.js": "^11.6.0",
     "mitt": "^3.0.0",
-    "pinia": "^2.0.26",
-    "pinia-plugin-persistedstate-2": "^2.0.3",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue-scrollto": "^2.20.0",
-    "vue3-async-computed": "^3.0.0",
-    "vuex": "^4.1.0",
-    "vuex-persist": "^3.1.3"
+    "vue3-async-computed": "^3.0.0"
   }
 }
