--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "vue": "^3.2.45",
+    "vue-cookie-comply": "^0.0.3",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue-scrollto": "^2.20.0",
