--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thzero/library_client_vue3",
-  "version": "0.16.25",
+  "version": "0.16.25-alpha",
   "version_major": 0,
   "version_minor": 16,
   "version_patch": 25,
