--- a/.github/workflows/publish-alpha.yaml
+++ b/.github/workflows/publish-alpha.yaml
@@ -30,7 +30,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         registry-url: 'https://registry.npmjs.org'
-    - run: npm publish --access public
+    - run: npm publish --access public --tag alpha
       if: success()
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
