--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@thzero/library_client_vue3",
-  "version": "0.17.12-alpha.1",
+  "version": "0.17.13",
   "version_major": 0,
   "version_minor": 17,
-  "version_patch": 12,
+  "version_patch": 13,
   "version_date": "03/12/2023",
   "description": "An opinionated library of common functionality to bootstrap a VueJs based SPA application.",
   "author": "thZero",
